# Finkargo

./: README.md  TEST.postman_collection.json  database.db  main.py  pyproject.toml
adapters/controllers/: auth_controller.py  balance_controller.py  matriz_controller.py  permiso_controller.py  rol_controller.py  usuario_controller.py
adapters/repositories/: permiso_repository.py  rol_repository.py  usuario_repository.py
adapters/web/: app.py
adapters/web/middlewares/: input_validation_middleware.py  jwt_authentication_middleware.py
domain/models/: usuario.py
domain/services/: matriz_service.py  permiso_service.py  rol_service.py  usuario_service.py
infrastructure/config/: schemas.py
infrastructure/persistence/: database.py
infrastructure/security/: jwt_token_validator.py
tests/: test_auth_controller.py  test_balance_controller.py  test_matriz_controller.py
